--- a/_src/_layouts/default.html
+++ b/_src/_layouts/default.html
@@ -22,6 +22,7 @@
 
         </div>
 
+        <script src="js/vendor.min.js"></script>
         <!-- Custom minified JS -->
         <script src="js/main.min.js"></script>
 
