update demo page

--- a/_assets/_scss/main.scss
+++ b/_assets/_scss/main.scss
@@ -1,5 +1,8 @@
-@import "reset";
+@import "../_vendor/normalize-scss/normalize";
+
+@import "demo";
 
 body {
-    background: white;
+    background: #fff;
 }
+
